--- a/plugins/accounts/plugins/accounts/html/organizations.html
+++ b/plugins/accounts/plugins/accounts/html/organizations.html
@@ -1,6 +1,15 @@
 <div class="row">
-    <div class="col-md-12" ng-controller="HawkularAccounts.OrganizationsController">
+    <div class="col-md-12" data-ng-controller="HawkularAccounts.OrganizationsController">
         <h1>Organizations</h1>
-        Hello {{hello}}
+        <div class="row" data-ng-show="organizations.length && !loading">
+            <div class="col-sm-6">
+                No organizations yet. How about creating one?
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-6">
+                Loading: {{loading}}
+            </div>
+        </div>
     </div>
 </div>
