HAWKULAR-37: Gulp-connect server fixed

--- a/plugins/metrics/index.html
+++ b/plugins/metrics/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>hawkular-metrics</title>
-    <base href='/'></base>
+    <base href='/'>
     <meta charset="UTF8">
 
 
@@ -71,7 +71,7 @@
 </div>
 
 <!-- add any scripts under dist/ here -->
-<script src="dist/hawkular-metrics.js"></script>
+<script src="dist/hawkular-ui-components-metrics.js"></script>
 
 </body>
 </html>
