--- a/plugins/metrics/plugins/metrics/html/alerts.html
+++ b/plugins/metrics/plugins/metrics/html/alerts.html
@@ -6,7 +6,7 @@
         <div ng-include="'plugins/metrics/html/alerts-view.html'" ng-controller="MetricsAlertController as mac"></div>
       </tab>
       <tab heading="Alerts Setup">
-        <div ng-include="'plugins/metrics/html/alerts-setup.html'"></div>
+        <div ng-include="'plugins/metrics/html/alerts-setup.html'" ng-controller="MetricsAlertSetupController as mas"></div>
       </tab>
     </tabset>
   </div>
