--- a/plugins/metrics/plugins/metrics/html/alerts-setup.html
+++ b/plugins/metrics/plugins/metrics/html/alerts-setup.html
@@ -1,5 +1,5 @@
 <div class="alert-settings">
-  <form class="form-horizontal">
+  <form class="form-horizontal" name="alertsSetup">
     <fieldset>
       <legend>Preferences</legend>
       <div class="form-group">
