--- a/plugins/metrics/plugins/metrics/html/alerts-view.html
+++ b/plugins/metrics/plugins/metrics/html/alerts-view.html
@@ -1,4 +1,7 @@
-<p class="info-top"><strong>{{(mac.alertList | filter:timeFilter).length}} alerts</strong><!--  last week. --></p>
+<div class="info-top clearfix">
+  <p class="settings pull-left"><a href="#" ng-click="mac.openSetup()"><i class="fa fa-cog"></i>Alert Settings</a></p>
+  <p class="pull-right"><strong>{{(mac.alertList | filter:timeFilter).length}} alerts</strong> last week.</p>
+</div>
 
 <div class="alerts-activity">
   <div ng-repeat="alert in mac.alertList | filter:timeFilter | orderBy: '-start'">
